push for training

--- a/initial_model_run.ipynb
+++ b/initial_model_run.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4          0   mmfit  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "       'alternatingdumbbellcurl'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "array(['har_data'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -227,10 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['mmfit', 'har_data', 'reco'], dtype=object)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['dataset'].unique()"
+   ]
   },
   {
    "cell_type": "code",
@@ -364,6 +377,172 @@
     "            total += y_batch.size(0)\n",
     "            correct += (predicted == y_batch).sum().item()\n",
     "    return 100 * correct / total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sig_array</th>\n",
+       "      <th>activity_name</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>dataset</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[[-0.1832595, -0.2076941, -0.53145254, 9.77168...</td>\n",
+       "      <td>squats</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mmfit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[[1.502728, -1.7263045, -1.4062113, 0.86939216...</td>\n",
+       "      <td>squats</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mmfit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[[-0.21502449, -1.5980228, -1.4941758, 6.47373...</td>\n",
+       "      <td>rest</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mmfit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[[0.6059781, 0.07819072, -0.53633946, 7.046148...</td>\n",
+       "      <td>rest</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mmfit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[[0.09896013, -0.2724458, 0.53145254, 1.087338...</td>\n",
+       "      <td>rest</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mmfit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151782</th>\n",
+       "      <td>151782</td>\n",
+       "      <td>[[0.6453633617195623, -3.3918659447031194, 0.6...</td>\n",
+       "      <td>deviceontable</td>\n",
+       "      <td>reco_10006</td>\n",
+       "      <td>reco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151783</th>\n",
+       "      <td>151783</td>\n",
+       "      <td>[[0.5943834536410079, -3.3774912748098864, 0.6...</td>\n",
+       "      <td>deviceontable</td>\n",
+       "      <td>reco_10006</td>\n",
+       "      <td>reco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151784</th>\n",
+       "      <td>151784</td>\n",
+       "      <td>[[0.5968571751596301, -3.3746797423858386, 0.6...</td>\n",
+       "      <td>deviceontable</td>\n",
+       "      <td>reco_10006</td>\n",
+       "      <td>reco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151785</th>\n",
+       "      <td>151785</td>\n",
+       "      <td>[[0.6648895340216258, -3.32562119567251, 0.689...</td>\n",
+       "      <td>deviceontable</td>\n",
+       "      <td>reco_10006</td>\n",
+       "      <td>reco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151786</th>\n",
+       "      <td>151786</td>\n",
+       "      <td>[[0.6175027016798849, -3.38652396287669, 0.653...</td>\n",
+       "      <td>deviceontable</td>\n",
+       "      <td>reco_10006</td>\n",
+       "      <td>reco</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>141192 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                                          sig_array  \\\n",
+       "0            0  [[-0.1832595, -0.2076941, -0.53145254, 9.77168...   \n",
+       "1            1  [[1.502728, -1.7263045, -1.4062113, 0.86939216...   \n",
+       "2            2  [[-0.21502449, -1.5980228, -1.4941758, 6.47373...   \n",
+       "3            3  [[0.6059781, 0.07819072, -0.53633946, 7.046148...   \n",
+       "4            4  [[0.09896013, -0.2724458, 0.53145254, 1.087338...   \n",
+       "...        ...                                                ...   \n",
+       "151782  151782  [[0.6453633617195623, -3.3918659447031194, 0.6...   \n",
+       "151783  151783  [[0.5943834536410079, -3.3774912748098864, 0.6...   \n",
+       "151784  151784  [[0.5968571751596301, -3.3746797423858386, 0.6...   \n",
+       "151785  151785  [[0.6648895340216258, -3.32562119567251, 0.689...   \n",
+       "151786  151786  [[0.6175027016798849, -3.38652396287669, 0.653...   \n",
+       "\n",
+       "        activity_name  subject_id dataset  \n",
+       "0              squats           0   mmfit  \n",
+       "1              squats           0   mmfit  \n",
+       "2                rest           0   mmfit  \n",
+       "3                rest           0   mmfit  \n",
+       "4                rest           0   mmfit  \n",
+       "...               ...         ...     ...  \n",
+       "151782  deviceontable  reco_10006    reco  \n",
+       "151783  deviceontable  reco_10006    reco  \n",
+       "151784  deviceontable  reco_10006    reco  \n",
+       "151785  deviceontable  reco_10006    reco  \n",
+       "151786  deviceontable  reco_10006    reco  \n",
+       "\n",
+       "[141192 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
