--- a/recofit/preprocessing.ipynb
+++ b/recofit/preprocessing.ipynb
@@ -1582,7 +1582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ds4440",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1596,7 +1596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
