--- a/initial_model_run.ipynb
+++ b/initial_model_run.ipynb
@@ -390,126 +390,117 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "Train Loss: 1.6421, Train Acc: 0.5596\n",
-      "Val Loss: 0.7731, Val Acc: 0.7333\n",
-      "New best model saved with val_loss: 0.7731\n",
-      "New best accuracy model saved with val_acc: 0.7333\n",
+      "Train Loss: 1.5871, Train Acc: 0.5851\n",
+      "Val Loss: 0.6882, Val Acc: 0.7719\n",
+      "New best model saved with val_loss: 0.6882\n",
+      "New best accuracy model saved with val_acc: 0.7719\n",
       "------------------------------------------------------------\n",
       "Epoch 2/50\n",
-      "Train Loss: 0.9383, Train Acc: 0.7176\n",
-      "Val Loss: 0.5798, Val Acc: 0.7788\n",
-      "New best model saved with val_loss: 0.5798\n",
-      "New best accuracy model saved with val_acc: 0.7788\n",
+      "Train Loss: 0.8489, Train Acc: 0.7453\n",
+      "Val Loss: 0.5356, Val Acc: 0.7938\n",
+      "New best model saved with val_loss: 0.5356\n",
+      "New best accuracy model saved with val_acc: 0.7938\n",
       "------------------------------------------------------------\n",
       "Epoch 3/50\n",
-      "Train Loss: 0.7210, Train Acc: 0.7712\n",
-      "Val Loss: 0.4338, Val Acc: 0.8279\n",
-      "New best model saved with val_loss: 0.4338\n",
-      "New best accuracy model saved with val_acc: 0.8279\n",
+      "Train Loss: 0.6309, Train Acc: 0.7994\n",
+      "Val Loss: 0.5411, Val Acc: 0.7877\n",
       "------------------------------------------------------------\n",
       "Epoch 4/50\n",
-      "Train Loss: 0.6130, Train Acc: 0.7985\n",
-      "Val Loss: 0.4198, Val Acc: 0.8267\n",
-      "New best model saved with val_loss: 0.4198\n",
+      "Train Loss: 0.5233, Train Acc: 0.8277\n",
+      "Val Loss: 0.3745, Val Acc: 0.8353\n",
+      "New best model saved with val_loss: 0.3745\n",
+      "New best accuracy model saved with val_acc: 0.8353\n",
       "------------------------------------------------------------\n",
       "Epoch 5/50\n",
-      "Train Loss: 0.5442, Train Acc: 0.8168\n",
-      "Val Loss: 0.3649, Val Acc: 0.8356\n",
-      "New best model saved with val_loss: 0.3649\n",
-      "New best accuracy model saved with val_acc: 0.8356\n",
+      "Train Loss: 0.4500, Train Acc: 0.8481\n",
+      "Val Loss: 0.3569, Val Acc: 0.8454\n",
+      "New best model saved with val_loss: 0.3569\n",
+      "New best accuracy model saved with val_acc: 0.8454\n",
       "------------------------------------------------------------\n",
       "Epoch 6/50\n",
-      "Train Loss: 0.4924, Train Acc: 0.8313\n",
-      "Val Loss: 0.3331, Val Acc: 0.8488\n",
-      "New best model saved with val_loss: 0.3331\n",
-      "New best accuracy model saved with val_acc: 0.8488\n",
+      "Train Loss: 0.4019, Train Acc: 0.8613\n",
+      "Val Loss: 0.3571, Val Acc: 0.8483\n",
+      "New best accuracy model saved with val_acc: 0.8483\n",
       "------------------------------------------------------------\n",
       "Epoch 7/50\n",
-      "Train Loss: 0.4596, Train Acc: 0.8404\n",
-      "Val Loss: 0.3103, Val Acc: 0.8491\n",
-      "New best model saved with val_loss: 0.3103\n",
-      "New best accuracy model saved with val_acc: 0.8491\n",
+      "Train Loss: 0.3650, Train Acc: 0.8715\n",
+      "Val Loss: 0.3564, Val Acc: 0.8481\n",
+      "New best model saved with val_loss: 0.3564\n",
       "------------------------------------------------------------\n",
       "Epoch 8/50\n",
-      "Train Loss: 0.4283, Train Acc: 0.8507\n",
-      "Val Loss: 0.3269, Val Acc: 0.8599\n",
-      "New best accuracy model saved with val_acc: 0.8599\n",
+      "Train Loss: 0.3327, Train Acc: 0.8808\n",
+      "Val Loss: 0.3689, Val Acc: 0.8471\n",
       "------------------------------------------------------------\n",
       "Epoch 9/50\n",
-      "Train Loss: 0.4045, Train Acc: 0.8557\n",
-      "Val Loss: 0.2646, Val Acc: 0.8810\n",
-      "New best model saved with val_loss: 0.2646\n",
-      "New best accuracy model saved with val_acc: 0.8810\n",
+      "Train Loss: 0.3096, Train Acc: 0.8870\n",
+      "Val Loss: 0.2956, Val Acc: 0.8693\n",
+      "New best model saved with val_loss: 0.2956\n",
+      "New best accuracy model saved with val_acc: 0.8693\n",
       "------------------------------------------------------------\n",
       "Epoch 10/50\n",
-      "Train Loss: 0.3850, Train Acc: 0.8609\n",
-      "Val Loss: 0.2839, Val Acc: 0.8662\n",
+      "Train Loss: 0.2856, Train Acc: 0.8948\n",
+      "Val Loss: 0.3602, Val Acc: 0.8702\n",
+      "New best accuracy model saved with val_acc: 0.8702\n",
       "------------------------------------------------------------\n",
       "Epoch 11/50\n",
-      "Train Loss: 0.3653, Train Acc: 0.8669\n",
-      "Val Loss: 0.3440, Val Acc: 0.8404\n",
+      "Train Loss: 0.2673, Train Acc: 0.8991\n",
+      "Val Loss: 0.3360, Val Acc: 0.8521\n",
       "------------------------------------------------------------\n",
       "Epoch 12/50\n",
-      "Train Loss: 0.3490, Train Acc: 0.8712\n",
-      "Val Loss: 0.3068, Val Acc: 0.8556\n",
+      "Train Loss: 0.2530, Train Acc: 0.9032\n",
+      "Val Loss: 0.2957, Val Acc: 0.8738\n",
+      "New best accuracy model saved with val_acc: 0.8738\n",
       "------------------------------------------------------------\n",
       "Epoch 13/50\n",
-      "Train Loss: 0.3326, Train Acc: 0.8763\n",
-      "Val Loss: 0.2998, Val Acc: 0.8612\n",
+      "Train Loss: 0.2368, Train Acc: 0.9077\n",
+      "Val Loss: 0.3164, Val Acc: 0.8667\n",
       "------------------------------------------------------------\n",
       "Epoch 14/50\n",
-      "Train Loss: 0.2893, Train Acc: 0.8905\n",
-      "Val Loss: 0.2591, Val Acc: 0.8687\n",
-      "New best model saved with val_loss: 0.2591\n",
+      "Train Loss: 0.1884, Train Acc: 0.9225\n",
+      "Val Loss: 0.2843, Val Acc: 0.8803\n",
+      "New best model saved with val_loss: 0.2843\n",
+      "New best accuracy model saved with val_acc: 0.8803\n",
       "------------------------------------------------------------\n",
       "Epoch 15/50\n",
-      "Train Loss: 0.2775, Train Acc: 0.8936\n",
-      "Val Loss: 0.2767, Val Acc: 0.8595\n",
+      "Train Loss: 0.1741, Train Acc: 0.9271\n",
+      "Val Loss: 0.3205, Val Acc: 0.8671\n",
       "------------------------------------------------------------\n",
       "Epoch 16/50\n",
-      "Train Loss: 0.2667, Train Acc: 0.8969\n",
-      "Val Loss: 0.2648, Val Acc: 0.8710\n",
+      "Train Loss: 0.1667, Train Acc: 0.9296\n",
+      "Val Loss: 0.2757, Val Acc: 0.8788\n",
+      "New best model saved with val_loss: 0.2757\n",
       "------------------------------------------------------------\n",
       "Epoch 17/50\n",
-      "Train Loss: 0.2584, Train Acc: 0.8981\n",
-      "Val Loss: 0.2625, Val Acc: 0.8733\n",
+      "Train Loss: 0.1585, Train Acc: 0.9318\n",
+      "Val Loss: 0.2968, Val Acc: 0.8725\n",
       "------------------------------------------------------------\n",
       "Epoch 18/50\n",
-      "Train Loss: 0.2525, Train Acc: 0.9000\n",
-      "Val Loss: 0.2085, Val Acc: 0.8890\n",
-      "New best model saved with val_loss: 0.2085\n",
-      "New best accuracy model saved with val_acc: 0.8890\n",
+      "Train Loss: 0.1553, Train Acc: 0.9327\n",
+      "Val Loss: 0.3273, Val Acc: 0.8692\n",
       "------------------------------------------------------------\n",
       "Epoch 19/50\n",
-      "Train Loss: 0.2452, Train Acc: 0.9027\n",
-      "Val Loss: 0.2396, Val Acc: 0.8807\n",
+      "Train Loss: 0.1492, Train Acc: 0.9345\n",
+      "Val Loss: 0.2996, Val Acc: 0.8714\n",
       "------------------------------------------------------------\n",
       "Epoch 20/50\n",
-      "Train Loss: 0.2396, Train Acc: 0.9047\n",
-      "Val Loss: 0.2397, Val Acc: 0.8823\n",
+      "Train Loss: 0.1414, Train Acc: 0.9371\n",
+      "Val Loss: 0.2805, Val Acc: 0.8789\n",
       "------------------------------------------------------------\n",
       "Epoch 21/50\n",
-      "Train Loss: 0.2332, Train Acc: 0.9064\n",
-      "Val Loss: 0.2442, Val Acc: 0.8791\n",
+      "Train Loss: 0.1206, Train Acc: 0.9441\n",
+      "Val Loss: 0.2812, Val Acc: 0.8794\n",
       "------------------------------------------------------------\n",
       "Epoch 22/50\n",
-      "Train Loss: 0.2273, Train Acc: 0.9082\n",
-      "Val Loss: 0.2452, Val Acc: 0.8827\n",
+      "Train Loss: 0.1149, Train Acc: 0.9456\n",
+      "Val Loss: 0.3093, Val Acc: 0.8751\n",
       "------------------------------------------------------------\n",
       "Epoch 23/50\n",
-      "Train Loss: 0.2074, Train Acc: 0.9146\n",
-      "Val Loss: 0.2601, Val Acc: 0.8742\n",
-      "------------------------------------------------------------\n",
-      "Epoch 24/50\n",
-      "Train Loss: 0.2011, Train Acc: 0.9171\n",
-      "Val Loss: 0.2448, Val Acc: 0.8803\n",
-      "------------------------------------------------------------\n",
-      "Epoch 25/50\n",
-      "Train Loss: 0.1955, Train Acc: 0.9178\n",
-      "Val Loss: 0.2462, Val Acc: 0.8806\n",
-      "Early stopping triggered after 25 epochs\n",
-      "Total training time: 782.55 seconds\n",
-      "Training complete! TensorBoard logs saved to runs/exercise_cnn/20250218-102618\n"
+      "Train Loss: 0.1114, Train Acc: 0.9472\n",
+      "Val Loss: 0.2979, Val Acc: 0.8862\n",
+      "New best accuracy model saved with val_acc: 0.8862\n",
+      "Early stopping triggered after 23 epochs\n",
+      "Total training time: 860.85 seconds\n",
+      "Training complete! TensorBoard logs saved to runs/exercise_cnn/20250218-140934\n"
      ]
     },
     {
@@ -580,51 +571,51 @@
    ],
    "source": [
     "\n",
-    "import torch.optim as optim\n",
-    "import torch.nn as nn\n",
+    "# import torch.optim as optim\n",
+    "# import torch.nn as nn\n",
     "\n",
     "\n",
-    "# Model setup\n",
-    "num_classes = len(np.unique(y_train_encoded))\n",
-    "window_length = 300  \n",
-    "device = torch.device(\"mps\" if torch.mps.is_available() else \"cpu\")\n",
+    "# # Model setup\n",
+    "# num_classes = len(np.unique(y_train_encoded))\n",
+    "# window_length = 300  \n",
+    "# device = torch.device(\"mps\" if torch.mps.is_available() else \"cpu\")\n",
     "\n",
-    "model = IMUCNN(num_classes=num_classes, window_length=window_length).to(device)\n",
+    "# model = IMUCNN(num_classes=num_classes, window_length=window_length).to(device)\n",
     "\n",
-    "# Loss and Optimizer\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "augmenter = TimeSeriesAugmentation()\n",
-    "\n",
-    "\n",
-    "# Training Loop\n",
-    "num_epochs = 5\n",
-    "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "\n",
-    "    for X_batch, y_batch in train_loader:\n",
-    "\n",
-    "        X_batch = augmenter.apply(X_batch)\n",
-    "        X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(X_batch)\n",
-    "        loss = criterion(outputs, y_batch)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        running_loss += loss.item()\n",
-    "\n",
-    "    avg_loss = running_loss / len(train_loader)\n",
-    "    #  Compute validation accuracy\n",
-    "    val_accuracy = compute_accuracy(model, val_loader, device)\n",
-    "    train_accuracy = compute_accuracy(model, train_loader, device)\n",
-    "\n",
-    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}, Val Accuracy: {val_accuracy:.2f}%, Train Accuracy {train_accuracy:.2f}%\")\n",
+    "# # Loss and Optimizer\n",
+    "# criterion = nn.CrossEntropyLoss()\n",
+    "# optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "# augmenter = TimeSeriesAugmentation()\n",
     "\n",
     "\n",
-    "print(\"Training complete!\")\n"
+    "# # Training Loop\n",
+    "# num_epochs = 5\n",
+    "# for epoch in range(num_epochs):\n",
+    "#     model.train()\n",
+    "#     running_loss = 0.0\n",
+    "\n",
+    "#     for X_batch, y_batch in train_loader:\n",
+    "\n",
+    "#         X_batch = augmenter.apply(X_batch)\n",
+    "#         X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+    "\n",
+    "#         optimizer.zero_grad()\n",
+    "#         outputs = model(X_batch)\n",
+    "#         loss = criterion(outputs, y_batch)\n",
+    "#         loss.backward()\n",
+    "#         optimizer.step()\n",
+    "\n",
+    "#         running_loss += loss.item()\n",
+    "\n",
+    "#     avg_loss = running_loss / len(train_loader)\n",
+    "#     #  Compute validation accuracy\n",
+    "#     val_accuracy = compute_accuracy(model, val_loader, device)\n",
+    "#     train_accuracy = compute_accuracy(model, train_loader, device)\n",
+    "\n",
+    "#     print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}, Val Accuracy: {val_accuracy:.2f}%, Train Accuracy {train_accuracy:.2f}%\")\n",
+    "\n",
+    "\n",
+    "# print(\"Training complete!\")\n"
    ]
   },
   {
