--- a/initial_model_run.ipynb
+++ b/initial_model_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>[[1.4453067, -1.6517789, -1.4514153, 1.4441968...</td>\n",
+       "      <td>[[1.502728, -1.7263045, -1.4062113, 0.86939216...</td>\n",
        "      <td>squats</td>\n",
        "      <td>0</td>\n",
        "      <td>mmfit</td>\n",
@@ -69,24 +69,24 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>[[1.3023642, -0.0488692, -0.82344604, 8.140672...</td>\n",
-       "      <td>squats</td>\n",
+       "      <td>[[-0.21502449, -1.5980228, -1.4941758, 6.47373...</td>\n",
+       "      <td>non-e</td>\n",
        "      <td>0</td>\n",
        "      <td>mmfit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>[[-0.67683846, 1.067792, 0.6450735, 3.2380664,...</td>\n",
-       "      <td>squats</td>\n",
+       "      <td>[[0.6059781, 0.07819072, -0.53633946, 7.046148...</td>\n",
+       "      <td>non-e</td>\n",
        "      <td>0</td>\n",
        "      <td>mmfit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>[[0.123394735, 0.28588483, 0.11362089, 12.6337...</td>\n",
-       "      <td>squats</td>\n",
+       "      <td>[[0.09896013, -0.2724458, 0.53145254, 1.087338...</td>\n",
+       "      <td>non-e</td>\n",
        "      <td>0</td>\n",
        "      <td>mmfit</td>\n",
        "    </tr>\n",
@@ -97,10 +97,10 @@
       "text/plain": [
        "   id                                          sig_array activity_name  \\\n",
        "0   0  [[-0.1832595, -0.2076941, -0.53145254, 9.77168...        squats   \n",
-       "1   1  [[1.4453067, -1.6517789, -1.4514153, 1.4441968...        squats   \n",
-       "2   2  [[1.3023642, -0.0488692, -0.82344604, 8.140672...        squats   \n",
-       "3   3  [[-0.67683846, 1.067792, 0.6450735, 3.2380664,...        squats   \n",
-       "4   4  [[0.123394735, 0.28588483, 0.11362089, 12.6337...        squats   \n",
+       "1   1  [[1.502728, -1.7263045, -1.4062113, 0.86939216...        squats   \n",
+       "2   2  [[-0.21502449, -1.5980228, -1.4941758, 6.47373...         non-e   \n",
+       "3   3  [[0.6059781, 0.07819072, -0.53633946, 7.046148...         non-e   \n",
+       "4   4  [[0.09896013, -0.2724458, 0.53145254, 1.087338...         non-e   \n",
        "\n",
        "  subject_id dataset  \n",
        "0          0   mmfit  \n",
@@ -110,13 +110,13 @@
        "4          0   mmfit  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_pickle('data/model_data_window_300_space_50.pkl')\n",
+    "df = pd.read_pickle('data/model_data_window_500_space_50.pkl')\n",
     "df.head()"
    ]
   },
@@ -479,7 +479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
